fix: center blog content image when not aligned

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
@@ -189,6 +189,11 @@ Styleguide Components.DjangoCMS.Blog.App.Page
   :--news-article-page .blog-content .align-right,
   :--news-article-page .blog-content .align-left {
     max-width: 100%;
+
+    /* So linked image or figure will center if not aligned */
+    &:not(img) {
+      width: fit-content;
+    }
   }
   :--news-article-page .blog-content .align-right,
   :--news-article-page .blog-content .align-left {
